terminal portfolio commit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://terminal.satnaing.dev/sat-naing-terminal-og.png"
+      content="/public/bash.png"
     />
 
     <!-- Twitter -->
@@ -35,7 +35,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://terminal.satnaing.dev/sat-naing-terminal-og.png"
+      content="/public/bash.png"
     />
 
     <!-- Favicons and assets -->
